@@ -1,3 +1,10 @@
+2022-05-23T16:12:55Z:
+* notice: last 14d: unq all: 1 186
+* notice: prev accum: outdated-unq outdated-all / unq all: 10 199 / 19 390
+* notice: next accum: outdated-unq outdated-all / unq all: 10 199 / 19 385
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -5 / +0 +0 -0 -5 / 1 23
+* notice: changed dates: [2022-05-09]
+
 2022-05-23T00:45:35Z:
 * notice: last 14d: unq all: 1 191
 * notice: prev accum: outdated-unq outdated-all / unq all: 9 132 / 19 324
